unpackaged/main/default/objects/Event_Service__c/Event_Service__c.object-meta.xml
<CustomObject>
    <description>Child object for medical Camp services to hold event types</description>
    <label>Event Service</label>
    <nameField>
        <label>Event Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>