unpackaged/main/default/objects/Event_Service__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>