unpackaged/main/default/objects/Event_Service__c/fields/Medical_Camp__c.field-meta.xml
<CustomField>
    <fullName>Medical_Camp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Medical Camp</label>
    <referenceTo>Medical_Camp__c</referenceTo>
    <relationshipLabel>Event Services</relationshipLabel>
    <relationshipName>Event_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>