unpackaged/main/default/objects/Event_Service__c/fields/Open_Now__c.field-meta.xml
<CustomField>
    <fullName>Open_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Now</label>
    <type>Checkbox</type>
</CustomField>