unpackaged/main/default/objects/Event_Service__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>To hold type of health events for medical camps</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Camp</fullName>
            </value>
            <value>
                <fullName>Blood Drive</fullName>
            </value>
            <value>
                <fullName>Disaster Relief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>